[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/rpg/png/panelInset_beige.png" type="Texture" id=2]

[node name="Inventory" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -39.4202
margin_top = -14.5351
margin_right = -10.4202
margin_bottom = -18.5351
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 6
alignment = 1
script = ExtResource( 1 )

[node name="ListPage" type="MarginContainer" parent="."]
margin_left = 273.0
margin_right = 523.0
margin_bottom = 390.0
rect_min_size = Vector2( 250, 390 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 0
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Background" type="NinePatchRect" parent="ListPage"]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 380.0
texture = ExtResource( 2 )
region_rect = Rect2( 1, 2, 92, 94 )
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 58
patch_margin_bottom = 34

[node name="TextureRect" type="TextureRect" parent="ListPage"]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 380.0

[node name="MarginContainer" type="MarginContainer" parent="ListPage"]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 380.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="ListPage/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 360.0

[node name="ItemList" type="VBoxContainer" parent="ListPage/MarginContainer/ScrollContainer"]
margin_right = 220.0
size_flags_horizontal = 3
alignment = 1

[node name="ItemInspect" type="MarginContainer" parent="."]
margin_left = 529.0
margin_right = 779.0
margin_bottom = 390.0
rect_min_size = Vector2( 250, 390 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10

[node name="TextureRect" type="NinePatchRect" parent="ItemInspect"]
margin_top = 10.0
margin_right = 240.0
margin_bottom = 380.0
texture = ExtResource( 2 )
region_rect = Rect2( 1, 2, 92, 94 )
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 58
patch_margin_bottom = 34
